--- a/index.html
+++ b/index.html
@@ -31,6 +31,51 @@
           </ul>
         </nav>
       </div>
+
+      <div class="banner-box">
+        <section class="banner">
+          <div class="banner-details">
+            <!-- <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="901"
+              height="700"
+              viewBox="0 0 901 700"
+              fill="none"
+            >
+              <path
+                d="M856.689 0H0V700H810.267L880.954 492.442H736.716L901 182.122H784.946L856.689 0Z"
+                fill="url(#paint0_linear_61_300)"
+                fill-opacity="0.5"
+              />
+              <defs>
+                <linearGradient
+                  id="paint0_linear_61_300"
+                  x1="849.303"
+                  y1="8.64826"
+                  x2="26.1936"
+                  y2="739.179"
+                  gradientUnits="userSpaceOnUse"
+                >
+                  <stop stop-color="#8C57EE" stop-opacity="0.05" />
+                  <stop offset="1" stop-color="#F144AE" stop-opacity="0.05" />
+                </linearGradient>
+              </defs>
+            </svg> -->
+            <div>
+              <h3>Play Like The</h3>
+              <h2>G.O.A.T.</h2>
+              <p>1-Click instant play</p>
+              <p>No Download</p>
+              <p>1000s of supported online games</p>
+              <button class="btn-primary">Sign In</button
+              ><button class="btn-primary btn-blue">Go Rogue</button>
+            </div>
+          </div>
+          <div class="banner-img">
+            <img src="./images/Group 18.png" alt="" />
+          </div>
+        </section>
+      </div>
     </header>
   </body>
 </html>
