--- a/index.html
+++ b/index.html
@@ -77,5 +77,24 @@
         </section>
       </div>
     </header>
+    <main>
+      <section class="section-3">
+        <div class="section-3-details">
+          <div>
+            <h3 class="radiant">Play Instantly,</h3>
+            <h3>No Downloads</h3>
+            <h3>No Installs.</h3>
+            <p>
+              Play games online for free without <br />downloading. Just click
+              the Play button <br />and play instantly in your browser.
+            </p>
+          </div>
+        </div>
+        <div class="section-3-image">
+          <img src="./images/Rectangle 55.png" alt="" />
+          <div><img src="./images/Rectangle 66.png" alt="" /></div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
