added a responsive footer

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="./images/Frame.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -10,7 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>B8A2 Gamer Zone</title>
+    <title>B8A2 Gaming</title>
   </head>
   <body>
     <header>
@@ -78,6 +79,30 @@
       </div>
     </header>
     <main>
+      <section class="section-2">
+        <div class="section-2-details">
+          <h3>Online Games <span class="radiant">Funny Videos</span></h3>
+          <p>A Collection of Hilarious Videos to Brighten Your Day</p>
+        </div>
+        <div class="section-2-img">
+          <div>
+            <img src="./images/Rectangle 4.png" alt="" />
+            <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+          </div>
+          <div>
+            <img src="./images/Rectangle 5.png" alt="" />
+            <p>Did you score? #unblockedgames #school</p>
+          </div>
+          <div>
+            <img src="./images/Rectangle 7.png" alt="" />
+            <p>Breaking game records like OG</p>
+          </div>
+          <div>
+            <img src="./images/Rectangle 6.png" alt="" />
+            <p>Busted gaming on school laptop, but you are still lit.</p>
+          </div>
+        </div>
+      </section>
       <section class="section-3">
         <div class="section-3-details">
           <div>
@@ -96,5 +121,29 @@
         </div>
       </section>
     </main>
+    <footer>
+      <div class="site-logo">
+        <img src="./images/Frame.png" alt="" />
+        <p><span>B8</span>A2 Gaming</p>
+      </div>
+      <div class="type-1">
+        <span>Our Story</span><span>Games</span><span>Web Games</span
+        ><span>Careers</span><span>Support</span><span>My Account</span>
+      </div>
+      <div class="type-1">
+        <img src="./images/facebook 1.png" alt="" /><img
+          src="./images/Group 49.png"
+          alt=""
+        /><img src="./images/twitter 1.png" alt="" />
+      </div>
+      <div class="type-2">
+        <span>Terms and Conditions</span><span>Privacy Policy</span
+        ><span>Cookie Policy</span><span>Privacy Settings</span>
+      </div>
+      <div class="type-2">
+        <span>Play Games @ Gamer </span
+        ><span>@ 2000-2023 Gamer Bangladesh</span>
+      </div>
+    </footer>
   </body>
 </html>
