completed the whole website with responsiveness

--- a/index.html
+++ b/index.html
@@ -86,19 +86,123 @@
         </div>
         <div class="section-2-img">
           <div>
-            <img src="./images/Rectangle 4.png" alt="" />
+            <div class="image">
+              <img class="image-img" src="./images/Rectangle 4.png" alt="" />
+              <div class="image-overlay">
+                <div>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="48"
+                    height="48"
+                    viewBox="0 0 48 48"
+                    fill="none"
+                  >
+                    <g clip-path="url(#clip0_62_379)">
+                      <path
+                        d="M24 0C10.7656 0 0 10.7666 0 24C0 37.2334 10.7656 48 24 48C37.2344 48 48 37.2334 48 24C48 10.7666 37.2344 0 24 0ZM33.541 24.8408L19.5411 33.8408C19.377 33.9473 19.1875 34 19 34C18.836 34 18.6699 33.959 18.5215 33.878C18.1992 33.7022 18 33.3662 18 33V15C18 14.6338 18.1992 14.2978 18.5215 14.122C18.8379 13.9482 19.2344 13.9589 19.5411 14.1592L33.541 23.1592C33.8262 23.3427 34 23.6602 34 24C34 24.3398 33.8262 24.6572 33.541 24.8408Z"
+                        fill="white"
+                      />
+                    </g>
+                    <defs>
+                      <clipPath id="clip0_62_379">
+                        <rect width="48" height="48" fill="white" />
+                      </clipPath>
+                    </defs>
+                  </svg>
+                </div>
+                <p>Watch Now</p>
+              </div>
+            </div>
             <p>No Download. No Installs. Play games Instantly on Gamer.</p>
           </div>
           <div>
-            <img src="./images/Rectangle 5.png" alt="" />
+            <div class="image">
+              <img class="image-img" src="./images/Rectangle 5.png" alt="" />
+              <div class="image-overlay">
+                <div>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="48"
+                    height="48"
+                    viewBox="0 0 48 48"
+                    fill="none"
+                  >
+                    <g clip-path="url(#clip0_62_379)">
+                      <path
+                        d="M24 0C10.7656 0 0 10.7666 0 24C0 37.2334 10.7656 48 24 48C37.2344 48 48 37.2334 48 24C48 10.7666 37.2344 0 24 0ZM33.541 24.8408L19.5411 33.8408C19.377 33.9473 19.1875 34 19 34C18.836 34 18.6699 33.959 18.5215 33.878C18.1992 33.7022 18 33.3662 18 33V15C18 14.6338 18.1992 14.2978 18.5215 14.122C18.8379 13.9482 19.2344 13.9589 19.5411 14.1592L33.541 23.1592C33.8262 23.3427 34 23.6602 34 24C34 24.3398 33.8262 24.6572 33.541 24.8408Z"
+                        fill="white"
+                      />
+                    </g>
+                    <defs>
+                      <clipPath id="clip0_62_379">
+                        <rect width="48" height="48" fill="white" />
+                      </clipPath>
+                    </defs>
+                  </svg>
+                </div>
+                <p>Watch Now</p>
+              </div>
+            </div>
             <p>Did you score? #unblockedgames #school</p>
           </div>
           <div>
-            <img src="./images/Rectangle 7.png" alt="" />
+            <div class="image">
+              <img class="image-img" src="./images/Rectangle 7.png" alt="" />
+              <div class="image-overlay">
+                <div>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="48"
+                    height="48"
+                    viewBox="0 0 48 48"
+                    fill="none"
+                  >
+                    <g clip-path="url(#clip0_62_379)">
+                      <path
+                        d="M24 0C10.7656 0 0 10.7666 0 24C0 37.2334 10.7656 48 24 48C37.2344 48 48 37.2334 48 24C48 10.7666 37.2344 0 24 0ZM33.541 24.8408L19.5411 33.8408C19.377 33.9473 19.1875 34 19 34C18.836 34 18.6699 33.959 18.5215 33.878C18.1992 33.7022 18 33.3662 18 33V15C18 14.6338 18.1992 14.2978 18.5215 14.122C18.8379 13.9482 19.2344 13.9589 19.5411 14.1592L33.541 23.1592C33.8262 23.3427 34 23.6602 34 24C34 24.3398 33.8262 24.6572 33.541 24.8408Z"
+                        fill="white"
+                      />
+                    </g>
+                    <defs>
+                      <clipPath id="clip0_62_379">
+                        <rect width="48" height="48" fill="white" />
+                      </clipPath>
+                    </defs>
+                  </svg>
+                </div>
+                <p>Watch Now</p>
+              </div>
+            </div>
             <p>Breaking game records like OG</p>
           </div>
           <div>
-            <img src="./images/Rectangle 6.png" alt="" />
+            <div class="image">
+              <img src="./images/Rectangle 6.png" alt="" />
+              <div class="image-overlay">
+                <div>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="48"
+                    height="48"
+                    viewBox="0 0 48 48"
+                    fill="none"
+                  >
+                    <g clip-path="url(#clip0_62_379)">
+                      <path
+                        d="M24 0C10.7656 0 0 10.7666 0 24C0 37.2334 10.7656 48 24 48C37.2344 48 48 37.2334 48 24C48 10.7666 37.2344 0 24 0ZM33.541 24.8408L19.5411 33.8408C19.377 33.9473 19.1875 34 19 34C18.836 34 18.6699 33.959 18.5215 33.878C18.1992 33.7022 18 33.3662 18 33V15C18 14.6338 18.1992 14.2978 18.5215 14.122C18.8379 13.9482 19.2344 13.9589 19.5411 14.1592L33.541 23.1592C33.8262 23.3427 34 23.6602 34 24C34 24.3398 33.8262 24.6572 33.541 24.8408Z"
+                        fill="white"
+                      />
+                    </g>
+                    <defs>
+                      <clipPath id="clip0_62_379">
+                        <rect width="48" height="48" fill="white" />
+                      </clipPath>
+                    </defs>
+                  </svg>
+                </div>
+                <p>Watch Now</p>
+              </div>
+            </div>
             <p>Busted gaming on school laptop, but you are still lit.</p>
           </div>
         </div>
@@ -120,6 +224,46 @@
           <div><img src="./images/Rectangle 66.png" alt="" /></div>
         </div>
       </section>
+      <section class="section-4">
+        <div class="games">
+          <div id="game-1">
+            <img src="./images/Rectangle 11.png" alt="" />
+            <h3>Action Games</h3>
+          </div>
+          <div id="game-2">
+            <img src="./images/Rectangle 12.png" alt="" />
+            <h3>Action Games</h3>
+          </div>
+          <div id="game-3">
+            <img src="./images/Rectangle 13.png" alt="" />
+            <h3>Adventure Games</h3>
+          </div>
+          <div id="game-4">
+            <img src="./images/Rectangle 14.png" alt="" />
+            <h3>Arcade Games</h3>
+          </div>
+          <div id="game-5">
+            <img src="./images/Rectangle 15.png" alt="" />
+            <h3>Word Games</h3>
+          </div>
+          <div id="game-6">
+            <img src="./images/Rectangle 16.png" alt="" />
+            <h3>Role Palying Games</h3>
+          </div>
+          <div id="game-7">
+            <img src="./images/Rectangle 17.png" alt="" />
+            <h3>Music & Audio Games</h3>
+          </div>
+          <div id="game-8">
+            <img src="./images/Rectangle 18.png" alt="" />
+            <h3>Puzzle Games</h3>
+          </div>
+          <div id="game-9">
+            <img src="./images/Rectangle 19.png" alt="" />
+            <h3>Strategy Games</h3>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
       <div class="site-logo">
@@ -131,16 +275,15 @@
         ><span>Careers</span><span>Support</span><span>My Account</span>
       </div>
       <div class="type-1">
-        <img src="./images/facebook 1.png" alt="" /><img
-          src="./images/Group 49.png"
-          alt=""
-        /><img src="./images/twitter 1.png" alt="" />
+        <img src="./images/facebook 1.png" alt="" />
+        <img src="./images/Group 49.png" alt="" />
+        <img src="./images/twitter 1.png" alt="" />
       </div>
       <div class="type-2">
         <span>Terms and Conditions</span><span>Privacy Policy</span
         ><span>Cookie Policy</span><span>Privacy Settings</span>
       </div>
-      <div class="type-2">
+      <div class="type-3">
         <span>Play Games @ Gamer </span
         ><span>@ 2000-2023 Gamer Bangladesh</span>
       </div>
